ridefine bean for acousticid + update assign tag from name